fix: fixes alignment of the notification content

--- a/src/components/Notification/Notification.scss
+++ b/src/components/Notification/Notification.scss
@@ -24,6 +24,7 @@ $arrow-size: 12px;
   }
 
   &__content {
+    align-self: center;
     overflow: hidden;
     display: -webkit-box;
     -webkit-line-clamp: 3;
